bk_ida/gccida/g2/dbxout_finish_symbol
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_finish_symbol/src/dbxout.c:2878:20: error: use of undeclared identifier 'off_646752'
fprintf( asmfile, &off_646752[1], ( unsigned int)current_sym_value); 
                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_finish_symbol/src/obj/dbxout.o] Error 1
